[gd_scene load_steps=6 format=3 uid="uid://cam1hrf4q680t"]

[ext_resource type="Script" path="res://Objects/SmallStatusbar.gd" id="1_ac06m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0y2c5"]
bg_color = Color(0.168627, 0.00784314, 0.054902, 1)
skew = Vector2(0.3, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.176471)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xgx7"]
bg_color = Color(0.717647, 0.0156863, 0.180392, 1)
skew = Vector2(0.3, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6nucu"]
bg_color = Color(0.00784314, 0.0784314, 0.160784, 1)
skew = Vector2(0.3, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.176471)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v38dl"]
bg_color = Color(0.152941, 0.427451, 0.917647, 1)
skew = Vector2(0.3, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SmallStatusbar" type="Node2D"]
script = ExtResource("1_ac06m")

[node name="HealthProgressBar" type="ProgressBar" parent="."]
offset_left = -11.0
offset_top = 19.0
offset_right = 10.0
offset_bottom = 22.0
theme_override_styles/background = SubResource("StyleBoxFlat_0y2c5")
theme_override_styles/fill = SubResource("StyleBoxFlat_2xgx7")
value = 50.0
show_percentage = false

[node name="ManaProgressBar" type="ProgressBar" parent="."]
offset_left = -11.0
offset_top = 23.0
offset_right = 10.0
offset_bottom = 25.0
theme_override_styles/background = SubResource("StyleBoxFlat_6nucu")
theme_override_styles/fill = SubResource("StyleBoxFlat_v38dl")
value = 50.0
show_percentage = false
